# MaaGF2Exilium

./: .env  .gitignore  README.md  check_resource.py  configure.py  debug.bat  install.bat  install.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml  install.yml  install.yml.bak  mirrorchyan.yml  mirrorchyan_release_note.yml
.nicegui/: storage-general.json
Doc/: Json文件说明.md
agent/: double_template_recognition.py  main.py  my_action.py
assets/: interface.json
assets/config/: maa_pi_config.json
assets/resource/base/: default_pipeline.json
assets/resource/base/pipeline/: liveTroopExercise.json  startGame.json
assets/resource/custom/: BatchRedeemCode.cs  CommunityDailyHelper.cs  CommunityDailyTask.cs
assets/resource/pipeline/: agent.json
assets/resource/pipeline/TimeLimitedTasks/: claimIntelligenceSupplyStaminaTask.json  claimSevenDayCheckInResourceTask.json
assets/resource/pipeline/public/: battleTask.json  controlButton.json  popup.json  stagePromotion.json
assets/resource/pipeline/tasks/: AutoSweepBattle.json  BatchRedeemCode.json  BulkExchange.json  ClaimRewardTasks.json  ClickAssistant.json  GuildTasks.json  MindSurveyTask.json  PrepareDailyTasks.json  PublicAreaDailyTasks.json  SimulatedCombat.json  StartGF2Game.json  StartGame.json  VersionActivityTask.json  organizeStoreroom.json
assets/resource/pipeline/timeLimitedTasks/: ClaimEventRewards.json  领取七日签到资源.json  领取情报补给体力.json
config/: maa_option.json
docs/: Git提交前缀.md  Json文件说明.md  Pip协议心得.md  常见问题.md  开发相关.md
scripts/: download_deps.py  json_to_mermaid.py
(+271 files in other folders)
